DAM-67: ami creation (#80)